testdata/baselines/reference/compiler/assertionWithNoArgument.errors.txt
assertionWithNoArgument(2,1): error TS1128: Declaration or statement expected.
assertionWithNoArgument(2,54): error TS1005: '{' expected.
assertionWithNoArgument(2,60): error TS1005: ';' expected.

==== assertionWithNoArgument (3 errors) ====
    
    export function assertWeird(value?: string): asserts value {
    ~~~~~~
!!! error TS1128: Declaration or statement expected.
                                                         ~~~~~
!!! error TS1005: '{' expected.
                                                               ~
!!! error TS1005: ';' expected.
    }
    
    assertWeird();
    assertWeird("hello");
    
